--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ bird_data.csv
 **/file_uploads/**
 **/raw_demos/**
 settings.py
+map_app/templates/enchanted_circle_map.html
+map_app/static/images/heatmap_raster.tif
+map_app/static/images/heatmap_raster.png
